app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import "tailwindcss";

:root {
  --background: #ffffff;
}

@theme inline {
  --font-primary: 'Poppins', sans-serif;

  --color-ftomain: #F86C65;
  --color-textmain: #1A1918;
  --color-textdesc: #595856;
  --color-textplaceholder: #C9C7C2;
  --color-ftowhite: #F4F0EF;
}

body {
  background: var(--background);
}

